Fixed z-index overlap on navbar

--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,7 +1,3 @@
-#tabs {
-    z-index: 1000;
-}
-
 .menu {
     position: relative;
     top: 20%;
@@ -33,8 +29,11 @@
     display: block;
     position: -webkit-sticky !important;
     position: sticky !important;
-    z-index: 500;
     top: 136 !important;
+}
+
+.sticky{
+    z-index: 20;
 }
 
 #fullwidth {
